bluejay-parser/tests/snapshots/schema_definition_integration_test__error@referenced_union_member_type_is_not_an_object.graphql.snap
---
source: bluejay-parser/tests/schema_definition_integration_test.rs
expression: formatted_errors
input_file: bluejay-parser/tests/test_data/schema_definition/error/referenced_union_member_type_is_not_an_object.graphql
---
Error: Referenced type `Int` is not an object
   ╭─[referenced_union_member_type_is_not_an_object.graphql:1:17]
   │
 1 │ union MyUnion = Int | String
   │                 ─┬─  
   │                  ╰─── Not an object type
───╯

Error: Referenced type `String` is not an object
   ╭─[referenced_union_member_type_is_not_an_object.graphql:1:23]
   │
 1 │ union MyUnion = Int | String
   │                       ───┬──  
   │                          ╰──── Not an object type
───╯
